Z-index fix: 0 for .form, so z-index of descendants is only taken into account inside .form

--- a/web-client/src/main/webapp/static/css/gwt/form/components/base/resizable-window.css
+++ b/web-client/src/main/webapp/static/css/gwt/form/components/base/resizable-window.css
@@ -12,3 +12,7 @@
 .modal-dialog.modal-resizable {
     margin: 0;
 }
+
+.form {
+    z-index: 0;
+}
